minor css fixes to prevent moving of the game board on mobile

--- a/app.css
+++ b/app.css
@@ -1,5 +1,8 @@
 html, body {
     overflow: hidden;
+    position: fixed;
+    width: 100%;
+    height: 100%;
     margin: 0px;
     padding: 0px;
 }
